canary/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-demo
spec:
  replicas: 5
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: rollouts-demo
  template:
    metadata:
      labels:
        app: rollouts-demo
    spec:
      containers:
        - name: rollouts-demo
          image: quay.io/openshiftdemos/rollouts-demo:blue
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
  strategy:
    canary:
      stableService: stable
      canaryService: canary
      trafficRouting:
        nginx:
          stableIngress: stable
          # additionalIngressAnnotations:
          #   canary-by-header: X-Canary
          #   canary-by-header-value: "true"
          #   canary-by-cookie: "canary"
      steps:
        - setWeight: 20
        - pause: {}
        - setWeight: 40
        - pause: { duration: 1m }
        - setWeight: 60
        - pause: { duration: 1m }
        - setWeight: 80
        - pause: { duration: 1m }
